--- a/main.html
+++ b/main.html
@@ -4,32 +4,43 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
-	<style>
-		div {
-			color:red;
-			
-		}
-	</style>
-	
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
 	<nav>
-		<div>
-		<a href="#/">Home</a> |
-		<a href="#/">About us</a> |
-		<a href="#/">Contact</a> |
-	</div>
-		<br>
-		<audio controls><source src="//commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3 "></audio>
-		<br>
-		<audio controls><source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg"></audio>
-		<br>
-		<audio controls><source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3"></audio>
+
+		<ul>
+			<li>
+				<a href="https://www.cricbuzz.com/">Home</a>
+			</li>
+		</ul>
+
+		<ul>
+			<li>
+				<a href="https://www.w3schools.com/">About us</a>
+			</li>
+		</ul>
+
+		<ul>
+			<li>
+				<a href="https://www.codewithharry.com/">Contact us</a>
+			</li>
+		</ul>
+
 	</nav>
-    <script type="text/javascript" src="./script.js">
-</script>
+
+	<h1>3 random audios</h1>
+<audio src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" controls></audio>
+
+
+	<audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" controls>
+	</audio>
+
+<audio src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" controls></audio>
+
+	<!-- the entire body must be written by student -->
+	<script type="text/javascript" src="./script.js">
+	</script>
 
 </body>
 
